--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "myPortfolio",
+  "name": "myportfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prettier": "prettier --write . && eslint . --fix"
   },
   "dependencies": {
     "@astrojs/react": "^4.1.1",
     "astro": "^5.9.0",
+    "prettier": "^3.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
