--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.1.1",
+    "@astrojs/sitemap": "^3.5.1",
     "astro": "^5.9.0",
     "prettier": "^3.5.3",
     "react": "^18.3.1",
